# twiga-warehouse

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
database/: enums.py  models.py  utils.py
legacy/: langchain_chunking.py  pymu_parsing.py
scripts/: cli.py  new_class.py  new_resource.py  new_subject.py  schema_validator.py
src/: dagster_defs.py  main.py  pdf_parse.py  toc.py  unstructured_parsing.py
src/application/: pipeline_runner.py
src/application/factories/: chunker_factory.py
src/application/mappers/: langchain_mapper.py  llm_mapper.py  unstructured_mapper.py
src/config/: settings.py
src/domain/entities/: book.py  chunk.py  chunker.py  parsed_book.py  table_of_contents.py  toc.py
src/domain/mappers/: unstructured_mapper.py
src/infrastructure/chunker/: .env copy  langchain_chunker.py  llm_chunker.py  markdown_chunker.py  mathematical_chunker.py  mistral_parser.py  unstructured_chunker.py
src/infrastructure/embedder/: embedding_router.py  ollama_embedder.py  together_embedder.py
src/infrastructure/parser/: firecrawl_parser.py  mistral_parser.py
src/infrastructure/table_of_contents/: table_of_contents.py
tests/: conftest.py  test_embedder_router.py  test_embedding_configuration.py  test_together_embedder.py
upload/: new_class.py
