[project]
name = "twiga-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-unstructured>=0.1.6",
    "pdfreader>=0.1.15",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "together>=1.5.5",
    "tqdm>=4.67.1",
    "unstructured-client>=0.34.0",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
