[project]
name = "twiga-warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "langchain-unstructured>=0.1.6",
    "pdfreader>=0.1.15",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "together>=1.5.5",
    "tqdm>=4.67.1",
    "unstructured-client>=0.34.0",
    "pydantic-settings>=2.10.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langchain-google-genai>=2.0.5",
    "mistralai==1.9.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.2.0",
]
